[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/level_end.gd" type="Script" id=1]
[ext_resource path="res://sprites/background_1.png" type="Texture" id=2]
[ext_resource path="res://sprites/players.png" type="Texture" id=3]
[ext_resource path="res://sprites/tiles.png" type="Texture" id=4]
[ext_resource path="res://scenes/gui.tscn" type="PackedScene" id=5]
[ext_resource path="res://sounds/man.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 64, 32, 32 ), Rect2( 0, 64, 32, 32 ), Rect2( 64, 96, 32, 32 ), Rect2( 0, 64, 32, 32 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_man"
length = 2.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 32, 32 ), Rect2( 0, 0, 32, 32 ), Rect2( 32, 32, 32, 32 ), Rect2( 0, 0, 32, 32 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "talk"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 128, 32, 32 ), Rect2( 32, 128, 32, 32 ), Rect2( 0, 128, 32, 32 ), Rect2( 32, 0, 32, 32 ) ]
}

[sub_resource type="TileSet" id=4]
0/name = "tiles.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "tiles.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "tiles.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 96, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "tiles.png 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 64, 32, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "tiles.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 96, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7.79355, 15.6621 )

[sub_resource type="Animation" id=6]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 32, 32 ), Rect2( 0, 0, 32, 32 ), Rect2( 32, 32, 32, 32 ), Rect2( 0, 0, 32, 32 ) ]
}

[sub_resource type="Animation" id=7]
length = 2.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 64, 32, 32 ), Rect2( 0, 64, 32, 32 ), Rect2( 64, 96, 32, 32 ), Rect2( 0, 64, 32, 32 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 64, 0, 32, 32 ), Rect2( 0, 32, 32, 32 ), Rect2( 64, 0, 32, 32 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 32, 64, 32, 32 ), Rect2( 64, 64, 32, 32 ), Rect2( 32, 64, 32, 32 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "talk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 32, 0, 32, 32 ), Rect2( 0, 128, 32, 32 ), Rect2( 32, 128, 32, 32 ), Rect2( 0, 128, 32, 32 ) ]
}

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 15.0342, 10 )

[node name="level_end" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 315, 235 )
scale = Vector2( 20.6875, 15.6875 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="player_right" type="Sprite" parent="."]
position = Vector2( 411.276, 367.661 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
flip_h = true
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="animation" type="AnimationPlayer" parent="player_right"]
anims/idle = SubResource( 1 )
anims/idle_man = SubResource( 2 )
anims/talk = SubResource( 3 )

[node name="map" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 2, 0, 524287, 4, 0, 458752, 4, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 3, 0 )

[node name="target" type="Area2D" parent="."]
position = Vector2( 322.978, 380.941 )

[node name="shape" type="CollisionShape2D" parent="target"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="player_left" type="KinematicBody2D" parent="."]
editor/display_folded = true
position = Vector2( -82, 0 )

[node name="sprite" type="Sprite" parent="player_left"]
position = Vector2( -75.995, 367.661 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 128, 32, 32 )
__meta__ = {
"_edit_lock_": true
}

[node name="animation" type="AnimationPlayer" parent="player_left/sprite"]
anims/idle = SubResource( 6 )
anims/idle_andrea = SubResource( 7 )
anims/run = SubResource( 8 )
anims/run_andrea = SubResource( 9 )
anims/talk = SubResource( 10 )

[node name="shape" type="CollisionShape2D" parent="player_left"]
position = Vector2( -76.9383, 377.325 )
shape = SubResource( 11 )
__meta__ = {
"_edit_lock_": true
}

[node name="gui" parent="." instance=ExtResource( 5 )]
editor/display_folded = true

[node name="label" parent="gui/node" index="0"]
margin_left = 149.469
margin_top = 102.267
margin_right = 488.469
margin_bottom = 249.267

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
[connection signal="body_entered" from="target" to="." method="_on_target_body_entered"]

[editable path="gui"]
